# AirPlayLeo

./: .gitignore  CMakeLists.txt  DESCRIPTION  FrameBuffer.c  Makefile  SDL  SDL.c  SDL.h  cfgparse.h  cmake_install.cmake  code  config.conf  g-overlay-test.c  g-overlay-test.cpp  install.sh  kys  leoplay.cpp  updater.sh
